Bug 999327 - Consider the wake-locks held by the main process when computing priorities. r=fabrice